syntax = "proto3";

package network.aviatrix.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

import "network/aviatrix/v1/params.proto";
import "cosmos/nft/v1beta1/nft.proto";

option go_package = "github.com/scorum/cosmos-network/x/aviatrix/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/aviatrix/params";
  }

  // PlaneByName queries the nft with provided name.
  rpc PlaneByName (QueryPlaneByNameRequest) returns (QueryPlaneByNameResponse) {
    option (google.api.http).get = "/aviatrix/planeByName";
  }

}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryPlaneByNameRequest {
  string name = 1;
}

message QueryPlaneByNameResponse {
  cosmos.nft.v1beta1.NFT nft = 1;
}
